Corrections Alignements

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -68,6 +68,9 @@
 .menu li {
   padding: 0.4rem 0.8rem;
   color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* DROPDOWN MENU */
